@@ -31,14 +31,22 @@
 
 #set -vx
 
+MPLABX_PATH=
+
 if [ "$(uname)" = "CYGWIN_NT-5.1" ]; then
   MPLABX_PATH="/cygdrive/c/Program Files/Microchip/MPLABX"
   GPUTILS_PATH="/cygdrive/c/svn_snapshots/gputils/gputils/gputils"
-elif [ -d "/opt/microchip/mplabx/v3.00" ]; then
-  MPLABX_PATH="/opt/microchip/mplabx/v3.00"
-  GPUTILS_PATH="$HOME/svn_snapshots/gputils/gputils"
 else
-  MPLABX_PATH="/opt/microchip/mplabx"
+  for d in "/opt/microchip/mplabx/*"; do
+    if [ -z "$MPLABX_PATH" ]; then
+      MPLABX_PATH="$d"
+    fi
+  done
+
+  if [ -z "$MPLABX_PATH" ]; then
+    MPLABX_PATH="/opt/microchip/mplabx"
+  fi
+
   GPUTILS_PATH="$HOME/svn_snapshots/gputils/gputils"
 fi
 
@@ -82,8 +90,7 @@ usage()
 # convert to lower case
 lowercase()
 {
-  if [ -n "$1" ]
-  then
+  if [ -n "$1" ]; then
     echo "$1" | tr "[A-Z]" "[a-z]"
   else
     tr "[A-Z]" "[a-z]"
@@ -93,8 +100,7 @@ lowercase()
 # remove trailing CRs
 fixnl()
 {
-  if [ -n "$1" ]
-  then
+  if [ -n "$1" ]; then
     cat "$1" | tr -d '\r'
   else
     tr -d '\r'
@@ -137,8 +143,7 @@ s/^\s*;\s*\(c\)\s+Copyright\s+[0-9]+\s*-\s*[0-9]+\s+Microchip\s+.+$//
   }
 }"
 
-  if [ -n "$1" ]
-  then
+  if [ -n "$1" ]; then
     cat "$1" | sed -r -s "$sed_cmd"
   else
     sed -r -s "$sed_cmd"
@@ -167,8 +172,7 @@ s/^\s*\/\/\s*Build\s+date\s*:.+$//
   }
 }"
 
-  if [ -n "$1" ]
-  then
+  if [ -n "$1" ]; then
     cat "$1" | sed -r -s "$sed_cmd"
   else
     sed -r -s "$sed_cmd"
@@ -188,9 +192,9 @@ dev_from_proc()
 
 #  { PROC_CLASS_PIC12E   , "__12F529T48A"  , { "pic12f529t48a"  , "p12f529t48a"    , "12f529t48a"      }, 0xD529,  3,    8, 0x00E0, { 0x07, 0x0F }, 0x06F, {     -1,     -1 }, 0x00FF, 0x0005FF, 0x000600, {       -1,       -1 }, { 0x000640, 0x000643 }, { 0x000FFF, 0x000FFF }, { 0x000600, 0x00063F }, "p12f529t48a.inc"  , "12f529t48a_g.lkr"  , 0 },
   case $1 in
-  0) sed -n -e 's/  *{[^,]*,[^,]*, *{ *"\([^"]*\)" *, *"[^"]*" *, *"[^"]*" *}.*/\1/p' < $GPUTILS_PATH/libgputils/gpprocessor.c;;
-  1) sed -n -e 's/  *{[^,]*,[^,]*, *{ *"[^"]*" *, *"\([^"]*\)" *, *"[^"]*" *}.*/\1/p' < $GPUTILS_PATH/libgputils/gpprocessor.c;;
-  2) sed -n -e 's/  *{[^,]*,[^,]*, *{ *"[^"]*" *, *"[^"]*" *, *"\([^"]*\)" *}.*/\1/p' < $GPUTILS_PATH/libgputils/gpprocessor.c;;
+    0) sed -n -e 's/  *{[^,]*,[^,]*, *{ *"\([^"]*\)" *, *"[^"]*" *, *"[^"]*" *}.*/\1/p' < $GPUTILS_PATH/libgputils/gpprocessor.c;;
+    1) sed -n -e 's/  *{[^,]*,[^,]*, *{ *"[^"]*" *, *"\([^"]*\)" *, *"[^"]*" *}.*/\1/p' < $GPUTILS_PATH/libgputils/gpprocessor.c;;
+    2) sed -n -e 's/  *{[^,]*,[^,]*, *{ *"[^"]*" *, *"[^"]*" *, *"\([^"]*\)" *}.*/\1/p' < $GPUTILS_PATH/libgputils/gpprocessor.c;;
   esac
 }
 
@@ -201,18 +205,15 @@ cmp_mp_inc()
   local mpp mpf gpp gpf gpasm_inc mplab_inc
 
   echo "mplabx .inc files in header folder:"
-  for mpp in "$MPLABX_INC"/*.[Ii][Nn][Cc]
-  do
+  for mpp in $MPLABX_INC/*.[Ii][Nn][Cc]; do
     mpf=$(basename "$mpp")
     gpf=$(lowercase "$mpf")
     gpp="$GPUTILS_INC/$gpf"
 
     #echo "=== $mpf"
 
-    if [ -e "$gpp" ]
-    then
-      if diff $BLANK_OPTS --strip-trailing-cr --brief "$gpp" "$mpp" > /dev/null
-      then
+    if [ -e "$gpp" ]; then
+      if diff $BLANK_OPTS --strip-trailing-cr --brief "$gpp" "$mpp" > /dev/null; then
         echo "+++ $gpf is up to date."
         equ=$(expr $equ + 1)
       else
@@ -220,18 +221,15 @@ cmp_mp_inc()
         mplab_inc="$BASH_TMPHEAD-mplabx-$mpf"
         inc_build_date_and_copyright_filter "$gpp" "$gpasm_inc"
         inc_build_date_and_copyright_filter "$mpp" "$mplab_inc"
-        if diff $BLANK_OPTS --strip-trailing-cr --brief "$gpasm_inc" "$mplab_inc" > /dev/null
-        then
+        if diff $BLANK_OPTS --strip-trailing-cr --brief "$gpasm_inc" "$mplab_inc" > /dev/null; then
           echo "/// $gpf is up to date, but differ with build date or copyright."
           equ_bdate=$(expr $equ_bdate + 1)
         else
-          if inc_spec "$gpp" | diff $BLANK_OPTS --strip-trailing-cr --brief - "$mplab_inc" > /dev/null
-          then
+          if inc_spec "$gpp" | diff $BLANK_OPTS --strip-trailing-cr --brief - "$mplab_inc" > /dev/null; then
             echo "### $gpf is up to date with gputils specifics."
             equ_spec=$(expr $equ_spec + 1)
           else
-            if grep '^;;;; Begin:' $gpf > /dev/null 2>&1
-            then
+            if grep '^;;;; Begin:' $gpf > /dev/null 2>&1; then
               echo "@@@ $gpf differs with gputils specifics."
               diff_spec=$(expr $diff_spec + 1)
             else
@@ -266,18 +264,15 @@ cmp_mp_lkr()
   local mpp mpf gpp gpf gpasm_lkr mplab_lkr
 
   echo "mplabx .lkr files in lkr folder:"
-  for mpp in "$MPLABX_LKR"/*.[Ll][Kk][Rr]
-  do
+  for mpp in $MPLABX_LKR/*.[Ll][Kk][Rr]; do
     mpf=$(basename "$mpp")
     gpf=$(lowercase "$mpf")
     gpp="$GPUTILS_LKR/$gpf"
 
     #echo "=== $mpf"
 
-    if [ -e "$gpp" ]
-    then
-      if diff $BLANK_OPTS --strip-trailing-cr --brief "$gpp" "$mpp" > /dev/null
-      then
+    if [ -e "$gpp" ]; then
+      if diff $BLANK_OPTS --strip-trailing-cr --brief "$gpp" "$mpp" > /dev/null; then
         echo "+++ $gpf is up to date."
         equ=$(expr $equ + 1)
       else
@@ -285,18 +280,15 @@ cmp_mp_lkr()
         mplab_lkr="$BASH_TMPHEAD-mplabx-$mpf"
         lkr_build_date_filter "$gpp" "$gpasm_lkr"
         lkr_build_date_filter "$mpp" "$mplab_lkr"
-        if diff $BLANK_OPTS --strip-trailing-cr --brief "$gpasm_lkr" "$mplab_lkr" > /dev/null
-        then
+        if diff $BLANK_OPTS --strip-trailing-cr --brief "$gpasm_lkr" "$mplab_lkr" > /dev/null; then
           echo "/// $gpf is up to date, but differ with build date."
           equ_bdate=$(expr $equ_bdate + 1)
         else
-          if lkr_spec "$gpp" | diff $BLANK_OPTS --strip-trailing-cr --brief - "$mplab_lkr" > /dev/null
-          then
+          if lkr_spec "$gpp" | diff $BLANK_OPTS --strip-trailing-cr --brief - "$mplab_lkr" > /dev/null; then
             echo "### $gpf is up to date with gputils specifics."
             equ_spec=$(expr $equ_spec + 1)
           else
-            if grep '^\/\/\/\/\ Begin:' $gpf > /dev/null 2>&1
-            then
+            if grep '^\/\/\/\/\ Begin:' $gpf > /dev/null 2>&1; then
               echo "@@@ $gpf differs with gputils specifics."
               diff_spec=$(expr $diff_spec + 1)
             else
@@ -308,8 +300,7 @@ cmp_mp_lkr()
         rm -f "$gpasm_lkr" "$mplab_lkr"
       fi
     else
-      if ls ${gpp%_g.lkr}.lkr > /dev/null 2>&1
-      then
+      if ls ${gpp%_g.lkr}.lkr > /dev/null 2>&1; then
         echo "??? old version: $(basename $(ls ${gpp%_g.lkr}.lkr))"
         old=$(expr $old + 1)
       else
@@ -339,10 +330,8 @@ is_in()
   shift
   l=$*
 
-  for i in $l
-  do
-    if [ $i = $e ]
-    then
+  for i in $l; do
+    if [ $i = $e ]; then
       return 0
     fi
   done
@@ -355,11 +344,9 @@ cmp_pl()
   local f n
 
   echo "devices from gpprocessor.c in lkr folder:"
-  for f in $(lkr_from_proc)
-  do
-    if [ ! -e $GPUTILS_LKR/$f ]
-    then
-      n=$(echo $f | sed -e 's/^\([^.]*\)\.lkr/\1/' -e 's/^\([^_]*\)_.*/\1/' -e 's/^\([^_]*\)_.*/\1/' -e 's/^\([^i]*\)i.*/\1/')
+  for f in $(lkr_from_proc); do
+    if [ ! -e $GPUTILS_LKR/$f ]; then
+      n=$(echo $f | sed -e 's/^\([^.]*\)\.lkr/\1/' -e 's/^\([^_]*\)_.*/\1/' -e 's/^\([^_]*\)_.*/\1/' -e 's/^\([^i]*\)i.*/\1/') #'
       echo "%%% $GPUTILS_LKR/$f does not exist. Similar: " $(ls $GPUTILS_LKR/$n* 2> /dev/null)
     fi
   done
@@ -372,10 +359,8 @@ cmp_lp()
   local f
 
   echo ".lkr from lkr folder in gpprocessor.c:"
-  for f in $GPUTILS_LKR/*.lkr
-  do
-    if ! is_in $(basename $f) $(lkr_from_proc)
-    then
+  for f in $GPUTILS_LKR/*.lkr; do
+    if ! is_in $(basename $f) $(lkr_from_proc); then
       echo "$f not in gpprocessor.c!"
     fi
   done
@@ -389,11 +374,9 @@ cmp_pi()
 
   # check .inc files
   echo "devices from gpprocessor.c in header folder:"
-  for f in $(dev_from_proc 1)
-  do
+  for f in $(dev_from_proc 1); do
     n=${f}.inc
-    if [ ! -e $GPUTILS_INC/$n ]
-    then
+    if [ ! -e $GPUTILS_INC/$n ]; then
       echo "*** $GPUTILS_INC/$n does not exist."
     fi
   done
@@ -401,20 +384,18 @@ cmp_pi()
 }
 
 # main procrdure
-for arg in $*
-do
-  case $arg
-  in
-  -mi) mi=1; has_opt=1;;
-  -ml) ml=1; has_opt=1;;
-  -pl) pl=1; has_opt=1;;
-  -lp) lp=1; has_opt=1;;
-  -pi) pi=1; has_opt=1;;
-  -all) mi=1; ml=1; pl=1; lp=1; pi=1;;
-  --strict) strict=1;;
-  -h|--help) usage; exit 0;;
-  -*) echo "Unknown option $arg!"; usage; exit 1;;
-  *) usage; exit 1;;
+for arg in $*; do
+  case $arg in
+    -mi) mi=1; has_opt=1;;
+    -ml) ml=1; has_opt=1;;
+    -pl) pl=1; has_opt=1;;
+    -lp) lp=1; has_opt=1;;
+    -pi) pi=1; has_opt=1;;
+    -all) mi=1; ml=1; pl=1; lp=1; pi=1;;
+    --strict) strict=1;;
+    -h|--help) usage; exit 0;;
+    -*) echo "Unknown option $arg!"; usage; exit 1;;
+    *) usage; exit 1;;
   esac
 done
 
